# docs/swagger.yaml
@@ -970,6 +970,29 @@ paths:
     get:
       consumes:
       - application/json
+      description: get unread inner message count
+      operationId: countAllUnReadMessage
+      responses:
+        "202":
+          description: 成功响应
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: 未授权
+          schema:
+            type: string
+        "500":
+          description: 系统错误
+          schema:
+            type: string
+      summary: CountAllUnReadMessage
+      tags:
+      - message_center
+  /message_center/inner/count_new:
+    get:
+      consumes:
+      - application/json
       description: count all message 获取所有消息分类数量
       operationId: countAllMessage
       parameters:
